--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
         <div class="text-center">
             <h1>nzAccordiScroll</h1>
             <h5>- Because Other Accordions Suck -</h5>
-            <h4><a href="">View on Github</a>
+            <h4><a href="https://github.com/nozzle/nzAccordiScroll">View on Github</a>
             </h4>
         </div>
         <br>
