--- a/example/index.html
+++ b/example/index.html
@@ -375,6 +375,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
+                <div id="toppedOut"></div>
             </div>
         </div>
     </div>
