--- a/example/index.html
+++ b/example/index.html
@@ -300,6 +300,26 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3 class="text-center">Using ng-repeat! (Development In Progress...)</h3>
+                <div nz-accordi-scroll class="card" ng-init="stacks = [1,2,3,4,5,6]">
+                    <div ng-repeat="test in stacks track by $index">
+                        <stack>Stack {{test}}</stack>
+                        <ul>
+                            <li>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</li>
+                            <li>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</li>
+                            <li>Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</li>
+                            <li>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <button class="btn btn-large" ng-click="stacks.push(stacks.length + 1)">Add Stack</button>
+                    <button class="btn btn-large" ng-click="stacks.splice(stacks.length - 1, 1)">Remove Stack</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
